[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Objects/Circuit/ConductorEquivalent.png" type="Texture" id=2]
[ext_resource path="res://Resources/Puzzles/Chapter V/ConductorInductor/ConductorEquivalent.gd" type="Script" id=3]

[node name="ConductorEquivalent" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Background" parent="." index="0"]
color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="Sprite" type="Sprite" parent="." index="2"]
position = Vector2( 160.891, 86.8171 )
scale = Vector2( 0.498156, 0.498156 )
texture = ExtResource( 2 )

[node name="InstructionLabel" type="Label" parent="." index="3"]
margin_left = 6.64819
margin_top = 8.86427
margin_right = 313.648
margin_bottom = 22.8643
text = "Get the Equivalent Capacitance on both Circuits."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="4"]
margin_left = 56.486
margin_top = 145.471
margin_right = 96.486
margin_bottom = 159.471
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="." index="5"]
margin_left = 11.6067
margin_top = 146.245
margin_right = 68.6067
margin_bottom = 166.245
rect_scale = Vector2( 0.7, 0.7 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ceq1" type="Label" parent="." index="6"]
margin_left = 38.1152
margin_top = 105.195
margin_right = 78.1152
margin_bottom = 119.195
text = "Ceq1:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ceq1" type="LineEdit" parent="Ceq1" index="0"]
margin_left = 37.5408
margin_top = -1.1376
margin_right = 95.5408
margin_bottom = 22.8624
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ceq2" type="Label" parent="." index="7"]
margin_left = 197.478
margin_top = 133.104
margin_right = 237.478
margin_bottom = 147.104
text = "Ceq2:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ceq2" type="LineEdit" parent="Ceq2" index="0"]
margin_left = 37.5408
margin_top = -1.1376
margin_right = 95.5408
margin_bottom = 22.8624
rect_scale = Vector2( 0.7, 0.7 )
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="text_entered" from="Ceq1/Ceq1" to="." method="_on_Ceq1_text_entered"]
[connection signal="text_entered" from="Ceq2/Ceq2" to="." method="_on_Ceq2_text_entered"]
